test/readonly/fail/adhoc02.v3
//@execute 0=0; 1=1; 2=2; 3=3; 4=4
def main(a: int) -> int {
	if (a == 0) return getType([0]);
	if (a == 1) return getType(['0']);
	if (a == 2) return getType([true]);
	if (a == 3) return getType([()]);
	var a: array<int>;
	return getType(a);
}
def getType<T>(a: T) -> int {
	if (array<int>.?(a)) return 0;
	if (array<byte>.?(a)) return 1;
	if (array<bool>.?(a)) return 2;
	if (array<void>.?(a)) return 3;
	return 4;
}
